fix styling overflows

--- a/src/react-components/Calendar/Calendar.css
+++ b/src/react-components/Calendar/Calendar.css
@@ -1,5 +1,6 @@
 .Calendar {
-    height: 100%;
-    width:100%;
+    height: 90%;
+    width: 100%;
     margin: auto;
+    max-height: inherit;
 }
