--- a/src/react-components/Post/Post.css
+++ b/src/react-components/Post/Post.css
@@ -1,14 +1,14 @@
 .post-container {
-    margin-top: 2%;
+    margin-top: 1%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 5%;
-    height: 75%;
-    min-height: 37%;
+    height: inherit;
     max-width: 37%;
+    margin-bottom: 1%;
     background-color: rgb(253, 253, 253);
+    padding: 3%;
 }
-.title {
+.post-title {
     text-align: left;
-    font-size: larger;
+    font-size: 40px;
 }
